# cutin-risk-analysis

./: .gitignore  ACCEPTED_THESIS_PROPOSAL.md  CITATION.cff  LICENSE  Makefile  OUTPUT.md  README.md  Run.ipynb  THESIS_COMPLETION_PLAN.md  THESIS_SCOPE_DELTA.md  pyproject.toml  thesis.tex
Latex Repository/: main.tex
Latex Repository/include/: Discussion.tex  Methods.tex  Results.tex
configs/: default.yaml  detection.json  paths.json  thesis.json
configs/datasets/: exid.yaml  highd.yaml  ngsim.yaml
configs/experiments/: cutin_detection.yaml  indicator_comparison.yaml
configs/experiments/final/: README.md  claim_matrix_template.csv  claim_matrix_template.md
data/: README.md
docs/: DATA.md  REPRODUCIBILITY.md  architecture.md  data_contract.md  decision_log.md  methodology.md
latex/: main.aux  main.lof  main.lot  main.out  main.tex  main.toc
latex/include/: Background.tex  Conclusion.tex  Introduction.tex  Related Work.tex  Theory.tex
latex/include/frontmatter/: Abstract.tex  Acknowledgements.tex  Titlepage.tex
latex/include/settings/: Settings.tex
notebooks/: 00_dataset_familiarization.ipynb  01_lane_change_examples.ipynb  02_indicator_sanity.ipynb
outputs/: README.md
outputs/reports/Step 01/: recording_quality_summary.md
outputs/reports/Step 02/: lane_change_counts_by_recording.csv  lane_change_details.md
outputs/reports/Step 03/: cutin_counts_by_recording.csv  cutin_details.md
outputs/reports/Step 04/: risk_metrics_by_recording.csv  risk_metrics_details.md  risk_metrics_events.csv
outputs/reports/Step 05/: top_cutin_visualization_by_recording.csv  top_cutin_visualization_details.md  top_cutin_visualization_events.csv
scripts/: cutin_report.py  generate_figures.sh  lane_change_report.py  lane_changes.py  neighbor_reconstruction_report.py  ngsim_prototype_pipeline.py  recording_report.py  render_exid_thesis_artifacts.py  render_framework_overview_figure.py  run_all.sh  run_final_thesis_pipeline.sh  run_thesis_phases.py  stage_features.py  step01_recording_report.py  step02_lane_change_report.py  step03_cutin_report.py  step04_risk_metrics_report.py  step05_visualize_top_cutins.py  step06_neighbor_reconstruction_report.py  step07_xy_lane_pipeline_report.py  step08_stage_features.py  step09_batch_stage_features.py  step10_risk_report.py  step11_early_warning_rule_search.py  step12_early_warning_logreg.py  step13a_logreg_tuned.py  step13b_realistic_follower_warning.py  step14_sfc_binary_encode.py  step14_sfc_binary_report.py  step15a_sfc_mirror_normalize.py  step15b_sfc_weighted_stage_features.py  step15c_sfc_prediction.py  step15d_sfc_archetypes.py  step16_sfc_predict_lanechange_cutin.py  step17_geometry_audit.py  step17_split_audit.py  step18_metrics_ci.py  step19_risk_prediction.py  step20_drac_analysis.py  step21_ngsim_feasibility_report.py  (+4 more)
src/cutin_risk/: __init__.py  cli.py  logging_conf.py  paths.py  settings.py  thesis_config.py
src/cutin_risk/analysis/: __init__.py  (+4 more)
tests/: test_surrogate_safety_geometry.py  test_thesis_config_defaults.py
visuaziler/: main.py  ngsim_main.py  read_csv.py  read_exid_csv.py  visualize_frame.py
(+172 files in other folders)
