[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutin-risk-analysis"
version = "0.0.0"
description = "Cut-in lane-change risk analysis toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "TODO: Author Name"}]
keywords = ["cut-in", "risk", "traffic", "analysis"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
